<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".auth.AuthFragment">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="20dp"
        android:hint="@string/login_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="20dp"
        android:hint="@string/password_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/login_button_text"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/tv_switch_to_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/want_signup"
        android:layout_gravity="center"
        android:textSize="16sp"
        />


</LinearLayout>